feat: Complete Phase 5 - Test Optimization & Quality Assurance

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       {
         "command": "llt-assistant.generateTests",
         "title": "Generate Tests"
+      },
+      {
+        "command": "llt-assistant.supplementTests",
+        "title": "Supplement Test Scenarios"
       }
     ],
     "menus": {
@@ -25,6 +29,11 @@
         {
           "when": "editorLangId == python",
           "command": "llt-assistant.generateTests",
+          "group": "1_modification"
+        },
+        {
+          "when": "editorLangId == python && resourceFilename =~ /test_.*\\.py$/",
+          "command": "llt-assistant.supplementTests",
           "group": "1_modification"
         }
       ]
