feat: generate frontend tests with pnpm (#9)
* feat: Add comprehensive testing infrastructure

Implement complete testing suite for LLT Assistant VSCode extension with
unit tests, integration tests, property-based tests, and CI/CD pipeline.

## Testing Framework
- Mocha test runner with TypeScript support (ts-node)
- Chai assertion library
- Sinon for mocking and stubbing
- @vscode/test-electron for integration testing
- fast-check for property-based testing
- nyc (Istanbul) for code coverage

## Test Infrastructure
### Mocking Layer
- Complete VSCode API mocks (600+ lines)
- Mock classes: Uri, Range, Position, Diagnostic, TreeItem
- Mock namespaces: window, workspace, languages, commands
- EventEmitter support for event simulation

### Test Helpers
- Test data factories for easy fixture creation
- Quality issue generators
- Analysis response builders
- Pytest file generators
- Utility functions for async testing

## Test Suites
### Unit Tests (50+ test cases)
- Quality API client tests (15+ cases)
  - Request/response handling
  - Error handling (network, HTTP, timeout)
  - Configuration management
- Quality tree provider tests (20+ cases)
  - Tree structure and navigation
  - Issue grouping and sorting
  - Tree item formatting
- Agent and generation module placeholders

### Integration Tests (15+ test cases)
- Extension activation and lifecycle
- Command registration and execution
- Configuration management
- VSCode environment integration
- File operations

### Property-Based Tests (10+ properties)
- Parser invariants
- Code generation properties
- File path handling
- API request validation
- String transformations
- 100+ generated test cases per property

## CI/CD Pipeline
### GitHub Actions Workflow
- Multi-platform testing (Ubuntu, Windows, macOS)
- Multi-version testing (Node 18, 20)
- Separate jobs for:
  - Unit tests with parallel matrix
  - Coverage reporting with Codecov integration
  - Integration tests with VSCode
  - Build verification

### Platform-S

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,15 @@
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
+	"exclude": [
+		"node_modules",
+		"dist",
+		"out",
+		"src/test/**/*.test.ts",
+		"src/test/**/*.spec.ts",
+		"src/test/mocks/**",
+		"src/test/helpers/**",
+		"src/test/fixtures/**"
+	]
 }
