--- a/package.json
+++ b/package.json
@@ -366,30 +366,49 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "vscode:prepublish": "pnpm run package",
+    "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
+    "compile-tests": "tsc -p tsconfig.test.json --outDir out",
+    "watch-tests": "tsc -p tsconfig.test.json -w --outDir out",
+    "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "pnpm run test:unit && pnpm run test:property",
+    "test:unit": "cross-env TS_NODE_PROJECT=tsconfig.test.json mocha --config .mocharc.json",
+    "test:unit:watch": "cross-env TS_NODE_PROJECT=tsconfig.test.json mocha --config .mocharc.json --watch",
+    "test:unit:coverage": "nyc pnpm run test:unit",
+    "test:integration": "pnpm run compile-tests && pnpm run compile && vscode-test",
+    "test:property": "cross-env TS_NODE_PROJECT=tsconfig.test.json mocha --require ts-node/register/transpile-only \"src/test/property/**/*.property.test.ts\"",
+    "test:coverage": "nyc --reporter=html --reporter=text --reporter=lcov pnpm run test:unit",
+    "test:all": "pnpm run test:unit && pnpm run test:property && pnpm run test:integration"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^5.2.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
+    "@types/sinon": "^21.0.0",
     "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
+    "chai": "^4.5.0",
+    "cross-env": "^10.1.0",
     "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
+    "fast-check": "^4.3.0",
+    "glob": "^12.0.0",
+    "mocha": "^11.7.5",
     "npm-run-all": "^4.1.5",
+    "nyc": "^17.1.0",
+    "sinon": "^21.0.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
