--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "pnpm: compile",
+      "label": "npm: compile",
       "type": "shell",
-      "command": "pnpm",
+      "command": "npm",
       "args": [
         "run",
         "compile"
