feat: Add Activity Bar context menu for context view
- Added view/item/context menu configuration to package.json
- Included inline buttons for 'Re-index Project' and 'Clear Cache'
- Buttons only show in the LLT Context Activity Bar view
- Improves UX with quick access to common actions

--- a/package.json
+++ b/package.json
@@ -290,6 +290,18 @@
           "group": "navigation@4"
         }
       ],
+      "view/item/context": [
+        {
+          "command": "llt.reindexProject",
+          "when": "view == lltContextView",
+          "group": "inline@1"
+        },
+        {
+          "command": "llt.clearCache",
+          "when": "view == lltContextView",
+          "group": "inline@2"
+        }
+      ],
       "editor/context": [
         {
           "when": "editorLangId == python",
