fix: implement unified backend URL configuration and fix coverage path matching
This commit addresses two critical issues:

## Issue 1: Unified Backend URL Configuration

**Problem**: Backend URL configuration was scattered across features with inconsistent defaults
- F1 (Test Gen): used llt-assistant.backendUrl → https://cs5351.efan.dev (prod)
- F2 (Quality): used llt-assistant.quality.backendUrl → http://localhost:8886 (local)
- F2 (Coverage): tried to use undefined config → fell back to hardcoded prod URL
- F3 (Impact): used llt-assistant.backendUrl → https://cs5351.efan.dev (prod)

User had to change URLs in multiple places, causing confusion.

**Solution**: Single unified configuration
- Created BackendConfigManager utility (src/utils/backendConfig.ts)
- All features now read from ONE config: llt-assistant.backendUrl
- Default changed to http://localhost:8886 (local development)
- Removed llt-assistant.quality.backendUrl (breaking change, but better UX)

### Changes:

**New File**: src/utils/backendConfig.ts
- Centralized backend URL management
- Single source of truth for all features
- Supports configuration change watching

**Updated Files**:
- package.json: Unified config, default = http://localhost:8886
- src/quality/api/client.ts: Use BackendConfigManager
- src/coverage/utils/config.ts: Use BackendConfigManager
- src/impact/api/impactClient.ts: Use BackendConfigManager
- src/services/ApiClient.ts: Use BackendConfigManager

**Benefits**:
✅ One setting controls all features
✅ Local dev by default (user's request)
✅ Reduced potential for bugs
✅ Clearer for users

---

## Issue 2: Coverage XML Path Matching

**Problem**: "No uncovered ranges found" error when clicking Generate Test

Root cause: coverage.xml has <source> tag defining base path:
```xml
<source>/path/to/LLT-Assistant-Backend/app</source>
<class filename="api/v1/routes.py">
```

But the extension was trying to match absolute paths against relative paths in XML.

**Solution**: Extract and use <sou

--- a/package.json
+++ b/package.json
@@ -280,13 +280,8 @@
       "properties": {
         "llt-assistant.backendUrl": {
           "type": "string",
-          "default": "https://cs5351.efan.dev",
-          "description": "Backend API URL for test generation"
-        },
-        "llt-assistant.quality.backendUrl": {
-          "type": "string",
           "default": "http://localhost:8886",
-          "description": "Backend API URL for test quality analysis (separate from test generation backend)"
+          "description": "Backend API URL for all LLT features (Test Generation, Quality Analysis, Coverage Optimization, Impact Analysis)"
         },
         "llt-assistant.quality.analysisMode": {
           "type": "string",
