--- a/package.json
+++ b/package.json
@@ -411,6 +411,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/sinon": "^21.0.0",
+    "@types/uuid": "^11.0.0",
     "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
@@ -434,6 +435,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "tree-sitter": "^0.25.0",
-    "tree-sitter-python": "^0.25.0"
+    "tree-sitter-python": "^0.25.0",
+    "uuid": "^13.0.0"
   }
 }
